# syosetu-dump

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  data.rs  main.rs
