[package]
name = "syosetu-dump"
version = "1.4.1"
authors = ["Douman <douman@gmx.se>"]
description = "syosetu dump tool"
license = "BSL-1.0"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
keywords = ["syosetu"]

repository = "https://github.com/DoumanAsh/syosetu"
documentation = "https://docs.rs/syosetu"

readme = "README.md"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.ureq]
version = "3"
default-features = false
features = ["rustls", "json"]

[dependencies.str-buf]
version = "3.0.3"
features = ["serde"]

[dependencies.arg]
version = "0.4"

[dependencies]
kuchiki = "0.8"
serde_json = "1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
